[gd_scene load_steps=10 format=2]

[ext_resource path="res://menus/main_menu/background.jpg" type="Texture" id=1]
[ext_resource path="res://menus/text_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://menus/main_menu/main_menu.gd" type="Script" id=3]
[ext_resource path="res://assets/ui/Staatliches-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://menus/settings_menu/settings_menu.tscn" type="PackedScene" id=5]
[ext_resource path="res://menus/lobby_menu/lobby_menu.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 128
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=3]
resource_name = "fast_buttons"
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/Buttons/NewAdventure:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CenterContainer/Buttons/Settings:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CenterContainer/Buttons/ExitToDesktop:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "intro"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/Title:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CenterContainer/Buttons/NewAdventure:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CenterContainer/Buttons/Settings:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.1, 2.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CenterContainer/Buttons/ExitToDesktop:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.2, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="MainMenu" type="TextureRect"]
self_modulate = Color( 0.207843, 0.207843, 0.207843, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
stretch_mode = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 200
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="MarginContainer"]
margin_top = 200.0
margin_right = 1920.0
margin_bottom = 361.0
rect_pivot_offset = Vector2( 960, 81 )
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "Project Borealis"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="CenterContainer"]
margin_left = 805.0
margin_top = 432.0
margin_right = 1115.0
margin_bottom = 647.0
alignment = 1

[node name="NewAdventure" parent="CenterContainer/Buttons" instance=ExtResource( 2 )]
modulate = Color( 1, 1, 1, 0 )
margin_right = 310.0
margin_bottom = 69.0
text = "New Adventure"

[node name="Settings" parent="CenterContainer/Buttons" instance=ExtResource( 2 )]
modulate = Color( 1, 1, 1, 0 )
margin_top = 73.0
margin_right = 310.0
margin_bottom = 142.0
text = "Settings"

[node name="ExitToDesktop" parent="CenterContainer/Buttons" instance=ExtResource( 2 )]
modulate = Color( 1, 1, 1, 0 )
margin_top = 146.0
margin_right = 310.0
margin_bottom = 215.0
text = "Exit To Desktop"

[node name="SettingsMenu" parent="." instance=ExtResource( 5 )]
visible = false

[node name="LobbyMenu" parent="." instance=ExtResource( 6 )]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "intro"
anims/fast_buttons = SubResource( 3 )
anims/intro = SubResource( 2 )
[connection signal="pressed" from="CenterContainer/Buttons/NewAdventure" to="." method="_on_NewAdventure_pressed"]
[connection signal="pressed" from="CenterContainer/Buttons/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="CenterContainer/Buttons/ExitToDesktop" to="." method="_on_ExitToDesktop_pressed"]
[connection signal="visibility_changed" from="SettingsMenu" to="." method="_on_SettingsMenu_visibility_changed"]
[connection signal="visibility_changed" from="LobbyMenu" to="." method="_on_LobbyMenu_visibility_changed"]
